[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/tiles/objects.png" type="Texture" id=3]

[node name="HUD" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = 86.0
margin/right = 137.0
margin/bottom = 147.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Pontos: 0
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="heart1" type="Sprite" parent="."]

transform/pos = Vector2( 16.3931, 25.9232 )
transform/scale = Vector2( 2.55042, 2.55042 )
texture = ExtResource( 3 )
region = true
region_rect = Rect2( 64, 2, 14, 13 )

[node name="heart2" type="Sprite" parent="."]

transform/pos = Vector2( 54.0564, 25.9231 )
transform/scale = Vector2( 2.55042, 2.55042 )
texture = ExtResource( 3 )
region = true
region_rect = Rect2( 64, 2, 14, 13 )

[node name="heart3" type="Sprite" parent="."]

transform/pos = Vector2( 92.2713, 25.9231 )
transform/scale = Vector2( 2.55042, 2.55042 )
texture = ExtResource( 3 )
region = true
region_rect = Rect2( 64, 2, 14, 13 )


